--- a/src/pages/Calories.css
+++ b/src/pages/Calories.css
@@ -3,6 +3,29 @@
 
 .loading-container {
   display: block;
+  font-size: 5vw;
+  --overflow: hidden;
+}
+
+@media only screen and (orientation: portrait) {
+  .CircularProgressbar {
+    font-size: 2vw !important;
+  }
+
+  .CircularProgressbar-text {
+    font-size: 2vh !important;
+  }
+}
+
+
+@media only screen and (orientation: landscape) {
+  .CircularProgressbar {
+    font-size: 2vw !important;
+  }
+
+  .CircularProgressbar-text {
+    font-size: 2vw !important;
+  }
 }
 
 .svg-element { 
@@ -15,6 +38,8 @@
 }
 
 .notice-text {
-  margin: 0;
-  padding-top: 50%;
+  top: 50%;
+  position: relative;
+  display: table;
+  margin: 0 auto;
 }
